Updating PV redis claimRef

--- a/Notes/2. Kubernetes/redis-pv.yml
+++ b/Notes/2. Kubernetes/redis-pv.yml
@@ -10,3 +10,6 @@ spec:
   hostPath:
     path: /tmp/sriram/redis/data
   persistentVolumeReclaimPolicy: Retain
+  claimRef:
+    name: redis-pvc
+    namespace: default
